# yaml-extender

./: .coveragerc  .gitignore  CHANGELOG.rst  LICENSE  Pipfile  README.rst  Usage.rst  output.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: lint_and_test.yml
docs/: conf.py
src/yaml_extender/: XymlException.py  __init__.py  __main__.py  cli.py  logger.py  main.py  xyml_exception.py  xyml_file.py  yaml_loader.py
src/yaml_extender/resolver/: include_resolver.py  inline_loop_resolver.py  loop_resolver.py  reference_resolver.py  resolver.py
tasks/: __init__.py
tests/parser_test/: test_inc_resolver.py  test_includes.py  test_ref_resolver.py
tests/res/: inc1.yml  inc2.yml  inc3.yml  inc4.yml  inc5.yml  root.yml  test_include.ref.yml  test_include.yml  test_references.ref.yml  test_references.yml
tests/resolver_test/: test_inc_resolver.py  test_inline_loop_resolver.py  test_loop_resolver.py  test_ref_resolver.py  test_yaml_extender.py
tests/resources/: exec.yaml  expected_file.yaml  root.yaml
tests/resources/subdir/: exec_test.yaml
