[build-system]
requires = ["setuptools>=36.2.2", "wheel>=0.28.0"]
build-backend = "setuptools.build_meta"

[project]
name = "yaml-extender"
description = "Extends the common .yaml syntax to provide more complex configuration options"
authors = [
  {name = "Simon Gallitscher", email = "adun.sg@gmx.de"}
]
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
license = {file = 'LICENSE'}
keywords = ["yaml", "configuration", "extension"]
dynamic = ["version", "readme"]
dependencies = [
  "pyyaml"
]

[project.urls]
homepage = "https://github.com/AdunSG/yaml-extender"

[project.scripts]
yaml-extender = "reader.__main__:main"

[project.optional-dependencies]
dev = [
  "coverage",
  "pytest",
  "tox"
]

[tool.setuptools.dynamic]
version = {attr = "yaml_extender.__version__"}
readme = {file = "README.rst"}

[tool.ruff]
line-length = 120
target-version = "py38"

exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
]

[tool.coverage.run]
branch = true
command_line = "-m pytest"

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.tox]
legacy_tox_ini = """
[tox]
isolated_build = true
min_version = 3.8
skip_missing_interpreters = true
envlist = py38, py39, py310, py311, coverage

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310
    3.11: py311, coverage

[testenv]
usedevelop=true
skip_install=true
commands = 
    pip install .[dev]
    pytest

[testenv:coverage]
skip_install = false
commands =
    pip install -e .[dev]
    coverage run --rcfile=pyproject.toml --source src/
    coverage report --rcfile=pyproject.toml

"""
